fix number alignment

--- a/styles/output/nursing-internal-pdf.css
+++ b/styles/output/nursing-internal-pdf.css
@@ -3418,7 +3418,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-review-questions-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3464,7 +3464,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-review-questions-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3512,7 +3512,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-check-understanding-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3558,7 +3558,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-check-understanding-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3606,7 +3606,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-critical-thinking-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3652,7 +3652,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-critical-thinking-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3700,7 +3700,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-competency-based-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3746,7 +3746,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-competency-based-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3794,7 +3794,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-reflection-questions-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3840,7 +3840,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-reflection-questions-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3888,7 +3888,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-what-nurses-do-container [data-type=exercise] [data-type=problem] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -3934,7 +3934,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-what-nurses-do-container [data-type=injected-exercise] [data-type=exercise-question] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -4034,7 +4034,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-eob [data-type=solution] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
@@ -4068,7 +4068,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 }
 
 .os-eob [data-type=question-solution] > .os-number {
-  display: table-cell;
+  display: inline;
   text-decoration: none;
   color: #000000;
   font-weight: bold;
